# gpg_gui

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  gpg_gui-1fafc0ec1cabe449.js  gpg_gui-2b5785cd49ace705_bg.wasm  gpg_gui-6f085cb44f223731_bg.wasm  gpg_gui-a3842b96a039bcb3_bg.wasm  gpg_gui-c4d32246c61a1a2b.js  gpg_gui-fdf10e777cceb7b.js  gpg_gui.ini  gpg_gui.js  gpg_gui_bg.wasm  index.html  publish.sh  ra-target.sh  remove_target.sh
.zed/: settings.json
src/: main.rs  screens.rs  state.rs
src/custom_widgets/: expire_time_selector.rs  mod.rs  multi_select.rs
src/native/: mod.rs
src/shared/: checkbox.rs  helpers.rs  mod.rs  new_cert_status.rs  page_code.rs  pages.rs  style_page_code.rs
src/wasm/: mod.rs
