[package]
name = "gpg_gui"
version = "0.1.0"
edition = "2024"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
egui = "0.31"
sequoia-openpgp = "2.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
egui = "0.31"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
wasm-bindgen = "=0.2.100"
getrandom = {version = "0.3.4", features=["wasm_js"]}
sequoia-openpgp = { version = "2.2.0", default-features = false, features = [
  "crypto-rust",
  "allow-experimental-crypto",
  "allow-variable-time-crypto"
]}

[dependencies]
console_error_panic_hook = "0.1.7"
env_logger = "0.11.11"
log = "0.4.33"
zeroize = "1.9.0"

[profile.release]
opt-level = "z"
strip = true 
panic = "abort"
lto = true
codegen-units = 1

